--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^1.2.1"
   },
