--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dotenv": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^1.2.1"
+    "react-transition-group": "^1.2.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
